# Fitspace-Versi-n1

./: README.md
backend/admin_gym/: .env  .env.example  .env.production  db.sqlite3  manage.py  start_server.bat
backend/admin_gym/admin_gym/: apps.py  backends.py  error_handlers.py  forms.py  middleware.py  models.py  notifications.py  signals.py  urls.py  utils.py  views.py
backend/admin_gym/admin_gym/management/commands/: backup_database.py  check_db_connection.py  limpiar_bd.py  limpiar_usuarios.py  resetear_password.py
backend/admin_gym/admin_gym/migrations/: 0001_initial.py  0002_alter_asistencia_clase_alter_asistencia_fecha.py  0003_perfilusuario.py  0004_credencialpendiente.py  0005_configuracionsistema_ejercicio_notificaciontemplate_and_more.py  0006_cliente_profesor_asignado_and_more.py  0007_cliente_rut_cliente_user_profesor_rut.py  0008_alter_cliente_rut_alter_profesor_rut.py  0009_alter_cliente_rut_alter_profesor_rut.py  0010_rutinaprofesor.py  0011_delete_rutinaprofesor.py  0012_alter_credencialpendiente_password_temporal.py  0013_eliminar_modelos_profesor.py  0014_clase_descripcion.py  0015_cliente_descripcion.py  0016_remove_cliente_descripcion.py  0017_remove_asistencia_clase_sesion_asistencia_sesion_and_more.py
backend/admin_gym/admin_gym/templates/admin_gym/: base.html  cambiar_contraseña.html  clases.html  configuracion.html  dashboard.html  login.html  pagos.html  (+7 more)
backend/admin_gym/profit/: asgi.py  settings.py  urls.py  wsgi.py
frontend/admin-desktop/src-tauri/: Cargo.toml  tauri.conf.json
frontend/admin-desktop/src-tauri/src/: main.rs
(+5 files in other folders)
