[package]
name = "gym-admin"
version = "0.0.0"
description = "Sistema Administrativo de Gestión de Gimnasio"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.0", features = [] }

[dependencies]
tauri = { version = "1.0", features = [ "window-minimize", "window-unminimize", "window-start-dragging", "window-unmaximize", "window-close", "window-maximize", "window-hide", "window-show", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
